// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevopsAdoptionTableCellFlag disabled matches the snapshot 1`] = `
<div>
  <div
    class="gl-display-flex gl-justify-content-end gl-sm-justify-content-start"
  >
    <gl-icon-stub
      class="gl-text-gray-500"
      name="issue-open-m"
      size="16"
    />
  </div>
</div>
`;

exports[`DevopsAdoptionTableCellFlag disabled when the enabled flag is changed to true matches the snapshot 1`] = `
<div>
  <div
    class="gl-display-flex gl-justify-content-end gl-sm-justify-content-start"
  >
    <gl-icon-stub
      class="gl-text-green-500"
      name="status_success_solid"
      size="16"
    />
  </div>
</div>
`;

exports[`DevopsAdoptionTableCellFlag enabled matches the snapshot 1`] = `
<div>
  <div
    class="gl-display-flex gl-justify-content-end gl-sm-justify-content-start"
  >
    <gl-icon-stub
      class="gl-text-green-500"
      name="status_success_solid"
      size="16"
    />
  </div>
</div>
`;

exports[`DevopsAdoptionTableCellFlag enabled when the enabled flag is changed to false matches the snapshot 1`] = `
<div>
  <div
    class="gl-display-flex gl-justify-content-end gl-sm-justify-content-start"
  >
    <gl-icon-stub
      class="gl-text-gray-500"
      name="issue-open-m"
      size="16"
    />
  </div>
</div>
`;

exports[`DevopsAdoptionTableCellFlag enabled with a variant specified matches the snapshot 1`] = `
<div
  variant="primary"
>
  <div
    class="gl-display-flex gl-justify-content-end gl-sm-justify-content-start"
  >
    <gl-icon-stub
      class="gl-text-green-500"
      name="status_success_solid"
      size="16"
    />
  </div>
</div>
`;
